Hat move javac and java opts from job builder